# bobo

./: .tool-versions  Cargo.toml  README.md  Taskfile.yml  routes.yml
src/: main.rs
