[package]
name = "bobo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.7.0"
env_logger = "0.11.3"
gethostname = "0.5.0"
log = "0.4.21"
mpsc = "0.2.3"
oasgen = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
